=== 0.0.1 ===
- init
- added Botocore class

=== 0.0.2 ===
- override bdist_egg in setup.py

=== 0.0.3 ===
- fixed bugs
- added one more example to description

=== 0.1.0 ===
- botocore==0.65.0 support

=== 0.1.1 ===
- fixed requirements installation

=== 0.1.4 ===
- another attempt to make requirements works properly

=== 0.1.5 ===
- allow to do synchronous requests

=== 0.1.6 ===
- update requirements for pip 6.0+, thx to @buckheroux

=== 1.0.0 ===
- support latest botocore v 1.2.0
- use semantic versioning

=== 1.0.1 ===
- minor fix in docs

=== 1.0.2 ===
- fixed http_response.raw -> http_response.buffer for streaming body
- updated docs
- updated authors

=== 1.1.0 ===
- proxy support
- code cleaning

=== 1.1.1 ===
- urlparse.parse for python3

=== 1.2.0 ===
- fixed botocore version in requirements
- removed requests from requirements
- python3 related fixes

=== 1.3.0 ===
- support latest botocore v 1.8.36

=== 1.3.1 ===
- support bytes body for request

=== 1.3.2 ===
- setup.py: fix requirements loading

=== 1.4.0 ===
- connect and request timeouts

=== 1.5.0 ===
- support latest botocore v 1.12.24