@@ -62,3 +62,4 @@
 
 === 1.5.0 ===
 - support latest botocore v 1.12.24
+- make curl dependency optional
